--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
     -->
     <title>React App</title>
   </head>
-  <body class="font-roboto">
+  <body class="font-roboto text-gray-lightest h-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="h-screen" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
